# usdSim

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  AddAttributeDialog.qml  AppStyle.qml  AttrInfo.h  AttributePanel.qml  CLAUDE.md  CMakeLists.txt  EditSchemaDialog.qml  PrimContextMenu.qml  PrimTreePanel.qml  README.md  UndoCommands.cpp  UndoCommands.h  UndoStack.cpp  UndoStack.h  UsdDocument.cpp  UsdDocument.h  UsdViewportItem.cpp  UsdViewportItem.h  ViewportPanel.qml  build.py  main.cpp  main.qml  package.json  pixi.toml  test_scene.usda  vcpkg.json  xarm6_with_gripper.usd
assets/usd/: franka_table_flattened.usda  test_scene.usda  xarm6_with_gripper.usd
python/examples/test_shared_stage/: main.py  sample.usda
shaders/: viewport.frag  viewport.frag.qsb  viewport.vert  viewport.vert.qsb
src/: AttrInfo.h  PrimInfo.h  UndoCommands.cpp  UndoCommands.h  UndoStack.cpp  UsdDocument.cpp  UsdDocument.h  UsdSimApp.cpp  UsdSimApp.h  UsdViewportItem.cpp  UsdViewportItem.h  bindings.cpp  main.cpp
src/qml/: AddAttributeDialog.qml  AppStyle.qml  AttributePanel.qml  EditSchemaDialog.qml  HistoryPanel.qml  PrimContextMenu.qml  PrimTreePanel.qml  ViewportPanel.qml  main.qml
src/shaders/: outline_post.frag  outline_post.vert  shadow.frag  shadow.vert  shadow_cube.frag  shadow_cube.vert  viewport.frag  viewport.vert
